# gene_sim

./: .gitignore  README.md  pyproject.toml
src/gene_sim/: __init__.py  main.py  sim_logic.py
src/gene_sim/includes/: calc.py  config.py  entities.py  logger_conf.py  setup.py
